--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,17 +8,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
-      id: go
-
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version-file: ./go.mod
+      id: go
 
     - run: make bootstrap-tools
     - run: make lint
     - run: make cover
 
-    - uses: codecov/codecov-action@v3
+    - uses: k1LoW/octocov-action@v0
