--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,20 +2,22 @@ name: Go
 on:
   push:
   pull_request:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     steps:
-
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version-file: ./go.mod
-      id: go
 
     - run: make bootstrap-tools
     - run: make lint
