--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,17 +5,19 @@ on:
       - "!*"
     tags:
       - "v*.*.*"
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     steps:
-
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: 1.19
-      id: go
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
