--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,17 +14,18 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v4
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
         go-version-file: ./go.mod
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v4
-
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v6
       with:
+        distribution: goreleaser
         version: latest
         args: release --rm-dist
       env:
