--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,6 +7,8 @@ concurrency:
   cancel-in-progress: true
 jobs:
   build:
+    permissions:
+      contents: write
     name: Build
     runs-on: ubuntu-latest
     timeout-minutes: 3
